tests/snapshots/bundle_rules@default-Sequent.snap
---
source: src/compute_rules.rs
info:
  bundle_name: default
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    dont_eat_mut_inside_shared: false
    ref_binding_on_inherited: Error
    mut_binding_on_inherited: Keep
    always_inspect_bm: false
---
real, m ⊢ p0: T0,  real, m ⊢ p1: T1
--------------------------------------- "Constructor"
real, m ⊢ [p0, p1]: [T0, T1]

inh, ro ⊢ p0: &T0,  inh, ro ⊢ p1: &T1
----------------------------------------- "ConstructorRef"
r, m ⊢ [p0, p1]: &[T0, T1]

inh, m ⊢ p0: &mut T0,  inh, m ⊢ p1: &mut T1
----------------------------------------------- "ConstructorRef"
r, m ⊢ [p0, p1]: &mut [T0, T1]

inh, ro ⊢ [p0, p1]: &T
------------------------ "ConstructorMultiRef"
r, m ⊢ [p0, p1]: &&T

inh, ro ⊢ [p0, p1]: &T
-------------------------- "ConstructorMultiRef"
r, m ⊢ [p0, p1]: &&mut T

inh, ro ⊢ [p0, p1]: &T
-------------------------- "ConstructorMultiRef"
r, m ⊢ [p0, p1]: &mut &T

inh, m ⊢ [p0, p1]: &mut T
------------------------------ "ConstructorMultiRef"
r, m ⊢ [p0, p1]: &mut &mut T

real, ro ⊢ p: T
----------------- "Deref"
r, m ⊢ &p: &T

real, m ⊢ p: T
----------------------- "Deref"
r, m ⊢ &mut p: &mut T

real, ro ⊢ p: T
------------------- "DerefMutWithShared"
r, m ⊢ &p: &mut T

inh, m ⊢ x: &T
-------------------- "BindingBorrow"
real, m ⊢ ref x: T

inh, m ⊢ x: &mut T
------------------------ "BindingBorrow"
real, m ⊢ ref mut x: T


------------- "Binding"
r, m ⊢ x: T


----------------- "Binding"
r, m ⊢ mut x: T
