tests/snapshots/bundle_rules@ergo2024-Sequent.snap
---
source: src/compute_rules.rs
info:
  bundle_name: ergo2024
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatInner
    fallback_to_outer: true
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: true
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
---
place, m ⊢ p0: T0,  place, m ⊢ p1: T1
----------------------------------------- "Constructor"
place, m ⊢ [p0, p1]: [T0, T1]

value, ro ⊢ p0: &T0,  value, ro ⊢ p1: &T1
--------------------------------------------- "ConstructorRef"
b, m ⊢ [p0, p1]: &[T0, T1]

value, ro ⊢ p0: &T0,  value, ro ⊢ p1: &T1
--------------------------------------------- "ConstructorRef"
b, ro ⊢ [p0, p1]: &mut [T0, T1]

value, rw ⊢ p0: &mut T0,  value, rw ⊢ p1: &mut T1
----------------------------------------------------- "ConstructorRef"
b, rw ⊢ [p0, p1]: &mut [T0, T1]

place, ro ⊢ [p0, p1]: &T
-------------------------- "ConstructorMultiRef"
b, m ⊢ [p0, p1]: &&T

value, ro ⊢ [p0, p1]: &T
-------------------------- "ConstructorMultiRef"
b, m ⊢ [p0, p1]: &&mut T

place, m ⊢ [p0, p1]: &T
-------------------------- "ConstructorMultiRef"
b, m ⊢ [p0, p1]: &mut &T

value, ro ⊢ [p0, p1]: &T
------------------------------- "ConstructorMultiRef"
b, ro ⊢ [p0, p1]: &mut &mut T

value, rw ⊢ [p0, p1]: &mut T
------------------------------- "ConstructorMultiRef"
b, rw ⊢ [p0, p1]: &mut &mut T

place, ro ⊢ p: T
------------------- "Deref(EatOuter)"
place, m ⊢ &p: &T

place, ro ⊢ p: T
----------------------------------------- "Deref(EatOuter)"
value, m ⊢ &p: &T, T is not a reference

place, m ⊢ p: T
--------------------------- "Deref(EatOuter)"
place, m ⊢ &mut p: &mut T

place, m ⊢ p: T
------------------------------------------------- "Deref(EatOuter)"
value, m ⊢ &mut p: &mut T, T is not a reference

value, ro ⊢ p: &T
-------------------- "Deref(EatInner)"
value, m ⊢ &p: &&T

value, ro ⊢ p: &T
------------------------ "Deref(EatInner)"
value, m ⊢ &p: &mut &T

value, m ⊢ p: &T
---------------------------- "Deref(EatInner)"
value, m ⊢ &mut p: &&mut T

b, m ⊢ p: &T
---------------------------- "Deref(EatInner)"
value, m ⊢ &mut p: &mut &T

value, ro ⊢ p: &T
--------------------------------- "Deref(EatInner)"
value, ro ⊢ &mut p: &mut &mut T

value, rw ⊢ p: &mut T
--------------------------------- "Deref(EatInner)"
value, rw ⊢ &mut p: &mut &mut T

place, ro ⊢ p: T
----------------------- "DerefMutWithShared(EatOuter)"
place, m ⊢ &p: &mut T

place, ro ⊢ p: T
--------------------------------------------- "DerefMutWithShared(EatOuter)"
value, m ⊢ &p: &mut T, T is not a reference

value, ro ⊢ p: &T
------------------------ "DerefMutWithShared(EatInner)"
value, m ⊢ &p: &&mut T

value, ro ⊢ p: &T
---------------------------- "DerefMutWithShared(EatInner)"
value, m ⊢ &p: &mut &mut T

b, m ⊢ ref x: T
---------------------- "RefBindingResetBindingMode"
value, m ⊢ ref x: &T

b, m ⊢ ref x: T
-------------------------- "RefBindingResetBindingMode"
value, m ⊢ ref x: &mut T

b, m ⊢ ref mut x: T
-------------------------- "RefBindingResetBindingMode"
value, m ⊢ ref mut x: &T

b, m ⊢ ref mut x: T
------------------------------ "RefBindingResetBindingMode"
value, m ⊢ ref mut x: &mut T

value, m ⊢ x: &T
--------------------- "BindingBorrow"
place, m ⊢ ref x: T

value, m ⊢ x: &mut T
------------------------- "BindingBorrow"
place, m ⊢ ref mut x: T


------------- "Binding"
b, m ⊢ x: T


--------------------- "Binding"
place, m ⊢ mut x: T
